Changes regarding styling the app

--- a/react-routing-app/public/index.html
+++ b/react-routing-app/public/index.html
@@ -22,9 +22,9 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+
+  <h1 float="left">&nbsp&nbsp&nbsp<img src="weather.ico" height="60px" width="60px" float="right"/>&nbsp&nbsp&nbspWeather App</h1>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
