--- a/react-routing-app/public/index.html
+++ b/react-routing-app/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/weather.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,11 +19,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Weather App</title>
   </head>
   <body>
 
-  <h1 float="left">&nbsp&nbsp&nbsp<img src="weather.ico" height="60px" width="60px" float="right"/>&nbsp&nbsp&nbspWeather App</h1>
+  <h4 float="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <img src="weather.ico" height="40px" width="40px" float="right"/>&nbsp&nbsp&nbspWeather App</h4>
 
     <div id="root"></div>
     <!--
