added package material-ui

--- a/react-routing-app/public/index.html
+++ b/react-routing-app/public/index.html
@@ -24,8 +24,8 @@
   <body>
 
 
-  <h4 float="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    <img src="weather.ico" height="40px" width="40px" float="right"/>&nbsp&nbsp&nbspWeather App</h4>
+  <h4 float="left" id="header-class">
+    <img src="weather.ico" height="40px" width="40px" float="right" id="image"/>Weather App</h4>
 
     <div id="root"></div>
     <!--
